@@ -19,19 +19,6 @@ repositories {
 
 mainClassName = 'pt.shop.management.ui.main.Start'
 
-run {
-    jvmArgs = [
-            "--add-modules=javafx.controls,javafx.fxml,javafx.graphics",
-            "--add-reads=javafx.base=ALL-UNNAMED",
-            "--add-reads=javafx.graphics=ALL-UNNAMED",
-            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
-            "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
-            "--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
-            "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
-            "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED"
-    ]
-}
-
 shadowJar {
     manifest {
         attributes 'Main-Class': mainClassName
